@@ -8,7 +8,10 @@ Checking: valgrind & splint
 	
 Log:
 
-- 07/08:2005, version 3.9.6: roms
+- 07/10/2005, version 3.9.7: roms
+	Added support of TiEmu VL as implemented in the ticables2 library (compatibility).
+
+- 07/09/2005, version 3.9.6: roms
 	Added count number of TiEmu VL instances so that read are non-blocking
 	if the other side is not present.
 	Automatically bind TiEmu to port #2 if port #1 is already in use.
